<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:elevation="8dp"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:id="@+id/changeAvatarTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:background="@color/purple_500"
        android:elevation="15dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/change_avatar_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/chooseFromGalleryButtonAvatarModal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/choose_from_gallery" />

    <ImageView
        android:id="@+id/selectedImageAvatarModal"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/baseline_profile_circle_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButtonAvatarModal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/saveButtonAvatarModal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/save_button" />
    </LinearLayout>

</LinearLayout>
