<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/settingsButtons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="3"
            tools:listitem="@layout/profile_button_item" />

        <Switch
            android:id="@+id/hideHintsSwitch"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:checked="false"
            android:text="@string/hide_hints_switch"
            android:textSize="20sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/textToSpeechSwitch"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:text="@string/text_to_speech_switch"
            android:textSize="20sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/darkModeSwitch"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:checked="false"
            android:text="@string/dark_mode_switch"
            android:textSize="20sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/about_button" />

        <Button
            android:id="@+id/goBackButton"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/go_back" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>